fix boxshadow for toggle btn and working on dark mode

--- a/dark-mode.scss
+++ b/dark-mode.scss
@@ -1,6 +1,7 @@
 body.dark {
   color-scheme: dark;
-  background-color: black;
+  background-color: #130f18;
   color: white;
-  
+
+
 }
