--- a/style.scss
+++ b/style.scss
@@ -93,8 +93,14 @@ body {
           width: 2.9rem;
           height: 1.5rem;
           border: none;
-          // box-shadow: 0 8px 16px 0 rgba(99, 102, 241,0.19), 0 6px 20px 0 rgb(99, 102, 241, 0.19);
+          box-shadow: 0 8px 16px 0 rgba(99, 102, 241,0.19), 0 6px 20px 0 rgb(99, 102, 241, 0.19);
           cursor: pointer;
+
+          @media (min-width: $tablet-size) {
+            & {
+              box-shadow: none;
+            }
+          }
 
           &:checked {
             background-color: $color-primary;
